--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
                 window.addEventListener('resize', onWindowResize, false);
                 function onWindowResize() {
                     camera.aspect = window.innerWidth / window.innerHeight;
+                    camera.updateProjectionMatrix();
 
                     renderer.setSize(window.innerWidth, window.innerHeight);
                 }
