--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Interactive Map</title>
         <style>
             body {
                 margin: 0;
-                /* touch-action: none; */
+                touch-action: none;
             }
             canvas {
                 display: block;
@@ -83,6 +84,8 @@
             let raycastObjs = [];
             let lineObjs = [];
 
+
+
             init();
             setupEventListeners();
             createGUI();
@@ -95,8 +98,8 @@
                 camera.lookAt(scene.position);
                 renderer.setPixelRatio(window.devicePixelRatio);
                 renderer.setSize(window.innerWidth, window.innerHeight);
-                document.body.appendChild(renderer.domElement);            
-
+                document.body.appendChild(renderer.domElement); 
+                
                 fetch("world_map.json").then((response) => {
                     return response.json();
                 }).then((topology) => {
@@ -229,6 +232,29 @@
                             INTERSECTED.material.color.set(INTERSECTED.userData.shapeColor);
                         }
                     } 
+                }
+
+                window.addEventListener("touchstart", onTouchStart, false);
+                let start = {x:0, y:0};
+                function onTouchStart(event) {
+                    start.x = event.touches[0].pageX;
+                    start.y = event.touches[0].pageY;
+                }
+
+                window.addEventListener("touchmove", onTouchMove, false); 
+                function onTouchMove(event){
+                    delta = {x:0, y:0};
+
+                    delta.x = start.x - event.touches[0].pageX;
+                    delta.y = start.y - event.touches[0].pageY;
+                    if (event.targetTouches.length === 1) {
+                        console.log(delta)
+                        camera.position.x += delta.x / 2;
+                        camera.position.y -= delta.y / 2;
+
+                        start.x = event.touches[0].pageX;
+                        start.y = event.touches[0].pageY;
+                    }
                 }
 
                 window.addEventListener("resize", onWindowResize, false);
