Fixed minor zoom bug on mobile.

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                     }    
 
                     moveToZ = THREE.MathUtils.clamp(moveToZ, 30, 200);
-                    camera.position.z = moveToZ;
+                    cameraUpdatePos.z = moveToZ;
                 });
                 
 
