Updated wheel event. Hopefully fixes issue some users had with mouse wheel zoom.

--- a/index.html
+++ b/index.html
@@ -189,7 +189,8 @@
 
                 document.addEventListener("wheel", onDocumentMouseWheel, false);
                 function onDocumentMouseWheel(event) {
-                    let moveToZ = camera.position.z - event.wheelDeltaY * 0.4;
+                    let direction = Math.sign(event.deltaY);
+                    let moveToZ = camera.position.z + (direction * 40);
                     moveToZ = THREE.MathUtils.clamp(moveToZ, 30, 200);
 
                     anime({
